[package]
name = "blaze-ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.4.0"
clap = { version = "4.4.11", features = ["derive"] }
cursive = "0.20.0"
fuzzy-matcher = "0.3.7"
prettytable-rs = "0.10.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shellexpand = "3.1.0"
slim = "0.1.0"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"

