[package]
name = "blaze-ssh"
version = "0.0.2"
edition = "2021"
authors = ["Sreedev Kodichath <sreedevpadmakumar@gmail.com>"]
description = "A Configurable CLI tool that helps you ssh into aws ec2 instances without leaving the terminal"
rust-version = "1.74.0"
repository = "https://github.com/sreedevk/blaze-ssh"
readme = "README.md"
keywords = ["aws", "ssh", "ec2", "terminal", "cli", "rust"]
categories = ["cli", "terminal", "aws", "ssh"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.4.0"
clap = { version = "4.4.11", features = ["derive"] }
cursive = "0.20.0"
fuzzy-matcher = "0.3.7"
prettytable-rs = "0.10.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shellexpand = "3.1.0"
slim = "0.1.0"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
